navbar collapse problem fixed

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ html, body {
     background-color: #0d3133;
     height: 60px;
     padding-left: 20px;
-    padding-right: 20px;
+    padding-right: 35px;
+    z-index: 9999;
 }
 
 .navbar-brand {
@@ -36,8 +37,8 @@ html, body {
 }
 
 .navbar-expand-lg .navbar-nav .nav-link {
-    padding-right: 25px;
-    padding-left: 25px;
+    padding-right: 12px;
+    padding-left: 12px;
     padding-top: 10px;
     padding-bottom: 10px;
     color: #efe9ce;
